package edu.ntnu.idatt2003.lectures.interfaces.animal;

/**
 * The Moveable interface represents an object that can move.
 */
public interface Moveable {
  boolean canMove();
}
